--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,12 @@
     <string name="app_name">4InARow</string>
     <string name="facebook_app_id">[APP_ID]</string>
     <string name="fb_login_protocol_scheme">fb[APP_ID]</string>
-    <string name="txt_username_signin">User Name:</string>
+    <string name="txt_email_signin">E-mail:</string>
     <string name="txt_pass_signin">Password:</string>
     <string name="btn_signin">Sign In</string>
+    <string name="btn_signup">Sign Up</string>
     <string name="game_name">4 In A Row</string>
+
+    <string name="facebook_application_id" translatable="false">1:305984604047:android:b668a8444f34696a</string>
+    <string name="facebook_login_protocol_scheme" translatable="false">fb1:305984604047:android:b668a8444f34696a</string>
 </resources>
